--- a/g21_practical/Cargo.toml
+++ b/g21_practical/Cargo.toml
@@ -11,7 +11,7 @@ serde_json = "1.0"
 uuid = { version = "1", features = ["v4", "serde"] }
 jsonwebtoken = "9"
 bcrypt = "0.15"
-sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
+sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros", "uuid"] }
 dotenv = "0.15"
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 chrono = { version = "0.4", features = ["serde"] }
