Middleware for access control (create_bug)
- Updated commands for testing too

--- a/g21_practical/Cargo.toml
+++ b/g21_practical/Cargo.toml
@@ -17,3 +17,4 @@ tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 chrono = { version = "0.4", features = ["serde"] }
 hex = "0.4"
 tera = "1.19"
+futures-util = "0.3.31"
